err
src/core/ext/transport/inproc/inproc_transport.cc: In function ‘void grpc_inproc_transport_init()’:
src/core/ext/transport/inproc/inproc_transport.cc:1092:17: error: unused variable ‘exec_ctx’ [-Werror=unused-variable]
   grpc_exec_ctx exec_ctx = GRPC_EXEC_CTX_INIT;
                 ^
src/core/ext/transport/inproc/inproc_transport.cc: In function ‘grpc_channel* grpc_inproc_channel_create(grpc_server*, grpc_channel_args*, void*)’:
src/core/ext/transport/inproc/inproc_transport.cc:1158:17: error: unused variable ‘exec_ctx’ [-Werror=unused-variable]
   grpc_exec_ctx exec_ctx = GRPC_EXEC_CTX_INIT;
                 ^
src/core/ext/transport/inproc/inproc_transport.cc: In function ‘void grpc_inproc_transport_shutdown()’:
src/core/ext/transport/inproc/inproc_transport.cc:1192:17: error: unused variable ‘exec_ctx’ [-Werror=unused-variable]
   grpc_exec_ctx exec_ctx = GRPC_EXEC_CTX_INIT;
                 ^
cc1plus: all warnings being treated as errors
make: *** [/usr/local/google/home/yashkt/grpc-projects/grpc-c-fork/grpc/objs/opt/src/core/ext/transport/inproc/inproc_transport.o] Error 1
src/core/ext/filters/client_channel/resolver/dns/c_ares/grpc_ares_wrapper.cc: In function ‘void grpc_ares_request_unref(grpc_ares_request*)’:
src/core/ext/filters/client_channel/resolver/dns/c_ares/grpc_ares_wrapper.cc:111:21: error: unused variable ‘new_exec_ctx’ [-Werror=unused-variable]
       grpc_exec_ctx new_exec_ctx = GRPC_EXEC_CTX_INIT;
                     ^
src/core/ext/filters/client_channel/resolver/dns/c_ares/grpc_ares_wrapper.cc: In function ‘void on_srv_query_done_cb(void*, int, int, unsigned char*, int)’:
src/core/ext/filters/client_channel/resolver/dns/c_ares/grpc_ares_wrapper.cc:229:17: error: unused variable ‘exec_ctx’ [-Werror=unused-variable]
   grpc_exec_ctx exec_ctx = GRPC_EXEC_CTX_INIT;
                 ^
cc1plus: all warnings being treated as errors
make: *** [/usr/local/google/home/yashkt/grpc-projects/grpc-c-fork/grpc/objs/opt/src/core/ext/filters/client_channel/resolver/dns/c_ares/grpc_ares_wrapper.o] Error 1
src/cpp/common/channel_arguments.cc: In destructor ‘grpc::ChannelArguments::~ChannelArguments()’:
src/cpp/common/channel_arguments.cc:70:17: error: unused variable ‘exec_ctx’ [-Werror=unused-variable]
   grpc_exec_ctx exec_ctx = GRPC_EXEC_CTX_INIT;
                 ^
src/cpp/common/channel_arguments.cc: In member function ‘void grpc::ChannelArguments::SetSocketMutator(grpc_socket_mutator*)’:
src/cpp/common/channel_arguments.cc:99:17: error: unused variable ‘exec_ctx’ [-Werror=unused-variable]
   grpc_exec_ctx exec_ctx = GRPC_EXEC_CTX_INIT;
                 ^
cc1plus: all warnings being treated as errors
make: *** [/usr/local/google/home/yashkt/grpc-projects/grpc-c-fork/grpc/objs/opt/src/cpp/common/channel_arguments.o] Error 1
src/proto/grpc/testing/services.proto: warning: Import src/proto/grpc/testing/stats.proto but not used.
src/proto/grpc/testing/services.proto: warning: Import src/proto/grpc/testing/stats.proto but not used.
make: Target `all' not remade because of errors.
